--- a/Project/DataScienceEcosystem.ipynb
+++ b/Project/DataScienceEcosystem.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*I am interested in data science because I love to work with data*"
+    "*In this notebook, Data Science Tools and Ecosystem are summarized.*"
    ]
   },
   {
@@ -29,6 +29,13 @@
    "metadata": {},
    "source": [
     "### cell5 will Print a string \"Hello IBM\" "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the popular languages that Data Scientists use are: numpy, panada, scikitlearn"
    ]
   },
   {
@@ -52,10 +59,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Below are a few examples of evaluating arithmetic expressions in Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the commonly used libraries used by Data Scientists include: numpy, panada, scikitlearn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "> Hi, I am Ella\n",
     "* My Portfolio : don't have a portfolio page yet\n",
     "* Email : <ellasun.syx@gmail.com>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Data Science Tools |\n",
+    "|-------------------|\n",
+    "| Jupyter Notebook  |\n",
+    "| RStudio           |\n",
+    "| VS Code           |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This a simple arithmetic expression to mutiply then add integers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(3*4)+5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will convert 200 minutes to hours by diving by 60."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3333333333333335"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "200 / 60\n"
    ]
   },
   {
@@ -82,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
