--- a/Project/DataScienceEcosystem.ipynb
+++ b/Project/DataScienceEcosystem.ipynb
@@ -35,7 +35,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some of the popular languages that Data Scientists use are: numpy, panada, scikitlearn"
+    "Some of the popular languages that Data Scientists use are\n",
+    "1. python\n",
+    "2. sql\n",
+    "3. R"
    ]
   },
   {
@@ -66,7 +69,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some of the commonly used libraries used by Data Scientists include: numpy, panada, scikitlearn"
+    "Some of the commonly used libraries used by Data Scientists include\n",
+    "1. numpy\n",
+    "2. panadas\n",
+    "3. scikitlearn\n",
+    "4. seaborn"
    ]
   },
   {
@@ -76,7 +83,7 @@
     "\n",
     "> Hi, I am Ella\n",
     "* My Portfolio : don't have a portfolio page yet\n",
-    "* Email : <ellasun.syx@gmail.com>"
+    "* Email : <ellafakemail@gmail.com>"
    ]
   },
   {
@@ -85,23 +92,17 @@
    "source": [
     "| Data Science Tools |\n",
     "|-------------------|\n",
-    "| Jupyter Notebook  |\n",
-    "| RStudio           |\n",
-    "| VS Code           |\n"
+    "| Jupyter Notebooks  |\n",
+    "| R Studio           |\n",
+    "| Anaconda          |\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This a simple arithmetic expression to mutiply then add integers"
+    "**Obectives**:\n",
+    "\n"
    ]
   },
   {
@@ -121,14 +122,8 @@
     }
    ],
    "source": [
+    "# This a simple arithmetic expression to mutiply then add integers\n",
     "(3*4)+5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This will convert 200 minutes to hours by diving by 60."
    ]
   },
   {
@@ -148,8 +143,23 @@
     }
    ],
    "source": [
+    "# This will convert 200 minutes to hours by diving by 60.\n",
     "200 / 60\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Author**\n",
+    "\n",
+    "Ella Sun\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
