--- a/omisa1.ipynb
+++ b/omisa1.ipynb
@@ -31,46 +31,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 383.84823389, 2296.49742446])"
+       "(array([ 383.8440553 , 2296.50832013]), 50154984.20934893)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from scipy.optimize import minimize\n",
+    "import numpy as np\n",
     "\n",
-    "\n",
-    "# Define the coefficients for the price response functions\n",
+    "# Coefficients for the Basic and Advanced versions\n",
     "a1, b1 = 35234.545786, 45.896450\n",
     "a2, b2 = 37790.240832, 8.227794\n",
     "\n",
-    "# Define the objective function to be maximized (Note: minimize function is used, so we take the negative of the objective)\n",
-    "def objective(prices):\n",
-    "    p1, p2 = prices\n",
+    "# Define the objective function to be minimized (negative revenue since we're using a minimization function)\n",
+    "def objective(p):\n",
+    "    p1, p2 = p\n",
     "    return -((p1 * (a1 - b1 * p1)) + (p2 * (a2 - b2 * p2)))\n",
     "\n",
-    "# Define the constraints\n",
-    "constraints = [\n",
-    "    {'type': 'ineq', 'fun': lambda prices: prices[1] - prices[0]},  # p2 - p1 >= 0 (Advanced price higher than Basic)\n",
-    "    {'type': 'ineq', 'fun': lambda prices: prices[0]},  # p1 >= 0\n",
-    "    {'type': 'ineq', 'fun': lambda prices: prices[1]}   # p2 >= 0\n",
-    "]\n",
+    "# Initial guess (starting prices)\n",
+    "p_initial = [100, 150]  # Arbitrary initial prices for Basic and Advanced versions\n",
     "\n",
-    "# Initial guess for the prices\n",
-    "initial_guess = [10, 20]\n",
+    "# Constraints\n",
+    "# p2 >= p1 (Advanced price should be higher than Basic)\n",
+    "# Prices p1, p2 >= 0 are inherently considered by the bounds parameter\n",
+    "constraints = [{'type': 'ineq', 'fun': lambda p: p[1] - p[0]}]  # Advanced version price - Basic version price >= 0\n",
     "\n",
-    "# Perform the optimization\n",
-    "result = minimize(objective, initial_guess, constraints=constraints)\n",
+    "# Bounds for p1 and p2 (assuming a realistic minimum price of 0 and a maximum price that could be reasonably set for laptops)\n",
+    "bounds = [(0, None), (0, None)]\n",
     "\n",
-    "result.x  # Optimal prices for Product 1 and Product 2"
+    "# Solve the optimization problem\n",
+    "result = minimize(objective, p_initial, method='SLSQP', bounds=bounds, constraints=constraints)\n",
+    "\n",
+    "# Extract the optimal prices\n",
+    "p_optimal = result.x\n",
+    "\n",
+    "p_optimal, -result.fun  # Display optimal prices and maximum revenue\n"
    ]
   },
   {
@@ -82,275 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (mac64[x86] - Darwin 23.3.0 23D60)\n",
-      "\n",
-      "CPU model: Intel(R) Core(TM) i5-8210Y CPU @ 1.60GHz\n",
-      "Thread count: 2 physical cores, 4 logical processors, using up to 4 threads\n",
-      "\n",
-      "Optimize a model with 0 rows, 9 columns and 0 nonzeros\n",
-      "Model fingerprint: 0xfa548505\n",
-      "Model has 9 quadratic objective terms\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [0e+00, 0e+00]\n",
-      "  Objective range  [4e+04, 4e+04]\n",
-      "  QObjective range [5e+00, 9e+01]\n",
-      "  Bounds range     [0e+00, 0e+00]\n",
-      "  RHS range        [0e+00, 0e+00]\n",
-      "Presolve removed 0 rows and 9 columns\n",
-      "Presolve time: 0.03s\n",
-      "Presolve: All rows and columns removed\n",
-      "\n",
-      "Barrier solved model in 0 iterations and 0.04 seconds (0.00 work units)\n",
-      "Optimal objective 7.38368672e+08\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[383.84827160837136,\n",
-       " 2296.498918132054,\n",
-       " 2351.877667019544,\n",
-       " 2050.2987944234346,\n",
-       " 4160.707856083366,\n",
-       " 6813.656504083377,\n",
-       " 8138.453042277662,\n",
-       " 4498.417684502101,\n",
-       " 8558.942360734147]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from scipy.optimize import Bounds\n",
-    "from gurobipy import Model, GRB, quicksum\n",
-    "\n",
-    "# Initialize model\n",
-    "model = Model(\"Optimal Pricing Strategy\")\n",
-    "\n",
-    "# Define variables (prices) for all nine products based on dataset structure\n",
-    "prices = model.addVars(9, lb=0, ub=GRB.INFINITY, vtype=GRB.CONTINUOUS, name=\"Price\")\n",
-    "\n",
-    "# Coefficients from the dataset\n",
-    "intercepts = price_response_df['Intercept'].values\n",
-    "sensitivities = price_response_df['Sensitivity'].abs().values  # Take absolute value to ensure positive sensitivity\n",
-    "\n",
-    "# Define the objective function\n",
-    "objective = quicksum((prices[i] * (intercepts[i] - sensitivities[i] * prices[i])) for i in range(9))\n",
-    "\n",
-    "# Set objective\n",
-    "model.setObjective(objective, GRB.MAXIMIZE)\n",
-    "\n",
-    "# Define constraints based on cross-elasticity (not explicitly given, but assuming need for non-negativity and potential capacity constraints)\n",
-    "# Here, we are primarily focused on the pricing strategy maximization, additional constraints related to cross-elasticity and capacity are not explicitly defined\n",
-    "\n",
-    "# Optimize model\n",
-    "model.optimize()\n",
-    "\n",
-    "# Extract optimal prices\n",
-    "optimal_prices = [prices[i].X for i in range(9)]\n",
-    "\n",
-    "optimal_prices\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 100: Prices = [ 383.82299907 1859.51670611 1841.85274264 1719.14309511 2451.26608747\n",
-      " 2791.8561638  3130.0013826  2483.84877279 3157.88892293]\n",
-      "Iteration 200: Prices = [ 383.84826994 2213.34910599 2241.27437028 1996.81190876 3458.37756486\n",
-      " 4439.76548574 5056.22256223 3596.21424661 5150.64995631]\n",
-      "Iteration 300: Prices = [ 383.84827161 2280.67701264 2327.8923897  2041.65981601 3872.15293305\n",
-      " 5412.45353771 6241.63035581 4094.37539108 6408.1661746 ]\n",
-      "Iteration 400: Prices = [ 383.84827161 2293.48829566 2346.67625309 2048.90346271 4042.15402942\n",
-      " 5986.5883119  6971.13725354 4317.47160514 7201.71191981]\n",
-      "Iteration 500: Prices = [ 383.84827161 2295.92605112 2350.74969562 2050.07342627 4111.99959053\n",
-      " 6325.47469821 7420.08007028 4417.38289144 7702.47273752]\n",
-      "Iteration 600: Prices = [ 383.84827161 2296.3899119  2351.63305671 2050.2623939  4140.69589021\n",
-      " 6525.50435673 7696.36210863 4462.12710716 8018.47392341]\n",
-      "Iteration 700: Prices = [ 383.84827161 2296.47817622 2351.82462117 2050.29291516 4152.48586802\n",
-      " 6643.57302488 7866.3876929  4482.16533223 8217.88399296]\n",
-      "Iteration 800: Prices = [ 383.84827161 2296.49497132 2351.86616357 2050.29784483 4157.32982275\n",
-      " 6713.26374227 7971.0224331  4491.13923996 8343.72015311]\n",
-      "Iteration 900: Prices = [ 383.84827161 2296.49816713 2351.8751724  2050.29864105 4159.31997896\n",
-      " 6754.39909312 8035.41526494 4495.15810989 8423.12807488]\n",
-      "Iteration 1000: Prices = [ 383.84827161 2296.49877523 2351.87712604 2050.29876965 4160.13764178\n",
-      " 6778.67947296 8075.04299073 4496.95791839 8473.23782102]\n",
-      "Iteration 1100: Prices = [ 383.84827161 2296.49889094 2351.8775497  2050.29879042 4160.47358149\n",
-      " 6793.01110824 8099.43012524 4497.76394365 8504.85918324]\n",
-      "Iteration 1200: Prices = [ 383.84827161 2296.49891296 2351.87764158 2050.29879378 4160.61160352\n",
-      " 6801.47043923 8114.43811062 4498.12491356 8524.81359582]\n",
-      "Iteration 1300: Prices = [ 383.84827161 2296.49891715 2351.8776615  2050.29879432 4160.66831037\n",
-      " 6806.4636085  8123.67411271 4498.28657012 8537.40567135]\n",
-      "Iteration 1400: Prices = [ 383.84827161 2296.49891794 2351.87766582 2050.29879441 4160.69160859\n",
-      " 6809.41085567 8129.35800248 4498.35896631 8545.35180184]\n",
-      "Iteration 1500: Prices = [ 383.84827161 2296.4989181  2351.87766676 2050.29879442 4160.70118074\n",
-      " 6811.15048544 8132.85590153 4498.39138818 8550.36614515]\n",
-      "Iteration 1600: Prices = [ 383.84827161 2296.49891813 2351.87766696 2050.29879442 4160.70511349\n",
-      " 6812.17731202 8135.00852908 4498.40590797 8553.53040717]\n",
-      "Iteration 1700: Prices = [ 383.84827161 2296.49891813 2351.87766701 2050.29879442 4160.70672928\n",
-      " 6812.78340237 8136.33326869 4498.41241051 8555.52718989]\n",
-      "Iteration 1800: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70739313\n",
-      " 6813.14115073 8137.1485212  4498.4153226  8556.78724396]\n",
-      "Iteration 1900: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70766588\n",
-      " 6813.35231377 8137.65023237 4498.41662675 8557.5823912 ]\n",
-      "Iteration 2000: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70777794\n",
-      " 6813.47695398 8137.95898836 4498.4172108  8558.08416263]\n",
-      "Iteration 2100: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70782398\n",
-      " 6813.55052359 8138.1489986  4498.41747236 8558.40080155]\n",
-      "Iteration 2200: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70784289\n",
-      " 6813.59394848 8138.26593202 4498.4175895  8558.60061406]\n",
-      "Iteration 2300: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785066\n",
-      " 6813.61958028 8138.33789353 4498.41764195 8558.72670418]\n",
-      "Iteration 2400: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785386\n",
-      " 6813.63470959 8138.38217906 4498.41766545 8558.80627235]\n",
-      "Iteration 2500: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785517\n",
-      " 6813.64363976 8138.40943264 4498.41767597 8558.85648323]\n",
-      "Iteration 2600: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785571\n",
-      " 6813.64891084 8138.42620465 4498.41768068 8558.88816841]\n",
-      "Iteration 2700: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785593\n",
-      " 6813.65202213 8138.43652625 4498.41768279 8558.90816309]\n",
-      "Iteration 2800: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785602\n",
-      " 6813.65385858 8138.44287821 4498.41768374 8558.92078058]\n",
-      "Iteration 2900: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785606\n",
-      " 6813.65494256 8138.44678725 4498.41768416 8558.92874275]\n",
-      "Iteration 3000: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785607\n",
-      " 6813.65558239 8138.4491929  4498.41768435 8558.93376721]\n",
-      "Iteration 3100: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785608\n",
-      " 6813.65596005 8138.45067335 4498.41768443 8558.93693786]\n",
-      "Iteration 3200: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785608\n",
-      " 6813.65618296 8138.45158442 4498.41768447 8558.93893867]\n",
-      "Iteration 3300: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785608\n",
-      " 6813.65631454 8138.45214511 4498.41768449 8558.94020127]\n",
-      "Iteration 3400: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785608\n",
-      " 6813.6563922  8138.45249015 4498.4176845  8558.94099802]\n",
-      "Iteration 3500: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785608\n",
-      " 6813.65643805 8138.4527025  4498.4176845  8558.9415008 ]\n",
-      "Iteration 3600: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785608\n",
-      " 6813.6564651  8138.45283317 4498.4176845  8558.94181808]\n",
-      "Iteration 3700: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785608\n",
-      " 6813.65648108 8138.45291359 4498.4176845  8558.9420183 ]\n",
-      "Iteration 3800: Prices = [ 383.84827161 2296.49891813 2351.87766702 2050.29879442 4160.70785608\n",
-      " 6813.6564905  8138.45296309 4498.4176845  8558.94214464]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([ 383.84827161, 2296.49891813, 2351.87766702, 2050.29879442,\n",
-       "       4160.70785608, 6813.65649147, 8138.45296829, 4498.4176845 ,\n",
-       "       8558.94215813])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Given that we cannot use Gurobi for the quadratic programming step, let's implement a simplified version\n",
-    "# of the projected gradient descent algorithm for the optimization problem.\n",
-    "\n",
-    "def gradient_descent_step(prices, intercepts, sensitivities, step_size=0.001):\n",
-    "    \"\"\"\n",
-    "    Perform one step of gradient descent and project onto the feasible set.\n",
-    "    \n",
-    "    prices: Current prices\n",
-    "    intercepts: Intercept terms of the price response functions\n",
-    "    sensitivities: Sensitivity terms of the price response functions\n",
-    "    step_size: Step size for the gradient descent\n",
-    "    \"\"\"\n",
-    "    # Calculate gradient of objective function with respect to prices\n",
-    "    gradients = -2 * sensitivities * prices + intercepts\n",
-    "    \n",
-    "    # Update prices using gradient\n",
-    "    new_prices = prices + step_size * gradients\n",
-    "    \n",
-    "    # Projection step: Ensure non-negativity and price ordering if necessary\n",
-    "    # For simplicity, we'll just enforce non-negativity here as the specific projection onto a set\n",
-    "    # defined by linear constraints would require solving a quadratic program.\n",
-    "    projected_prices = np.maximum(new_prices, 0)\n",
-    "    \n",
-    "    return projected_prices\n",
-    "\n",
-    "# Initialize all prices to zero\n",
-    "initial_prices = np.zeros(9)\n",
-    "\n",
-    "# Set step size and stopping criterion\n",
-    "step_size = 0.001\n",
-    "tolerance = 1e-6\n",
-    "\n",
-    "# Perform gradient descent until stopping criterion is met\n",
-    "current_prices = initial_prices\n",
-    "iteration = 0\n",
-    "while True:\n",
-    "    next_prices = gradient_descent_step(current_prices, intercepts, sensitivities, step_size)\n",
-    "    # Check stopping criterion (norm of gradient less than tolerance)\n",
-    "    if np.linalg.norm(next_prices - current_prices) < tolerance:\n",
-    "        break\n",
-    "    current_prices = next_prices\n",
-    "    iteration += 1\n",
-    "    if iteration % 100 == 0:  # Output every 100 iterations to monitor progress\n",
-    "        print(f\"Iteration {iteration}: Prices = {current_prices}\")\n",
-    "\n",
-    "current_prices\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 383.84827161, 2296.49891813, 2351.87766702, 2050.29879442,\n",
-       "       4160.70785608, 6813.65649147, 8138.45296829, 4498.4176845 ,\n",
-       "       8558.94215813])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Correcting the oversight by defining intercepts and sensitivities from the dataset for all products\n",
-    "intercepts = price_response_df['Intercept'].values\n",
-    "sensitivities = price_response_df['Sensitivity'].abs().values  # Taking absolute value to ensure positive sensitivity\n",
-    "\n",
-    "# Reinitialize prices to zero\n",
-    "initial_prices = np.zeros(len(intercepts))\n",
-    "\n",
-    "# Re-run the simplified projected gradient descent with correct intercepts and sensitivities\n",
-    "current_prices = initial_prices\n",
-    "iteration = 0\n",
-    "while True:\n",
-    "    next_prices = gradient_descent_step(current_prices, intercepts, sensitivities, step_size)\n",
-    "    # Check stopping criterion (norm of the difference less than tolerance)\n",
-    "    if np.linalg.norm(next_prices - current_prices) < tolerance:\n",
-    "        break\n",
-    "    current_prices = next_prices\n",
-    "    iteration += 1\n",
-    "\n",
-    "# Since the loop doesn't contain print statements this time, we directly output the final prices\n",
-    "current_prices\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
